--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<section id="header">
 				<div class="inner">
 			 
-					<h1>Hi, we are <strong>Lupa</strong>. <br/> DESIGNING HUMANOIDS FOR THE REAL ECONOMY
+					<h1>Hi, we are <strong>Lupa</strong>. <br/> SOLVING DEXTEROUS MANIPULATION FOR THE REAL ECONOMY
 					 </a>.</h1>
 
 					
