--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 			integrity="sha512-…"
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
+		
 		/>
+		<meta name="wb:op" content="4fd5b2583ad683a5fcd8353386646b11"/>
+		
 	</head>
 	<body class="is-preload">
 
