--- a/Careers.html
+++ b/Careers.html
@@ -14,6 +14,7 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+		<meta name="wb:op" content="4fd5b2583ad683a5fcd8353386646b11"/>
 	</head>
 	<body class="is-preload">
 
