--- a/Master_plan.html
+++ b/Master_plan.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta name="wb:op" content="4fd5b2583ad683a5fcd8353386646b11"/>
 	</head>
 	<body class="is-preload">
 
